force-app/main/default/objects/File_Staging__c/File_Staging__c.object-meta.xml
<CustomObject>
    <description>This is the object for File Staging</description>
    <label>File Upload</label>
    <nameField>
        <label>File Upload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Uploads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>