force-app/main/default/objects/File_Staging__c/fields/Business_Stream__c.field-meta.xml
<CustomField>
    <fullName>Business_Stream__c</fullName>
    <label>Business Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QI</fullName>
            </value>
            <value>
                <fullName>CEI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>