force-app/main/default/objects/File_Staging__c/fields/Error_FileId__c.field-meta.xml
<CustomField>
    <fullName>Error_FileId__c</fullName>
    <description>Error_FileId  will hold the Id of the result file that will come from Mule - after the file upload gets processed</description>
    <label>Error_FileId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>