force-app/main/default/objects/File_Staging__c/fields/Failure_Flag__c.field-meta.xml
<CustomField>
    <fullName>Failure_Flag__c</fullName>
    <formula>IF( AND(ISPICKVAL(Status__c, &apos;processed&apos;), Failure_Records__c  &lt;&gt; 0 ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failure Flag</label>
    <type>Checkbox</type>
</CustomField>