force-app/main/default/objects/File_Staging__c/fields/Failure_Records__c.field-meta.xml
<CustomField>
    <fullName>Failure_Records__c</fullName>
    <label>Failure Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>