force-app/main/default/objects/File_Staging__c/fields/File_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>File_CreatedDate__c</fullName>
    <description>This field will hold the CreatedDate of the csv file that inserted from LWC custom comp to content document object. Also used to record the date/time in which a bulk upload file was submitted.</description>
    <label>File_CreatedDate</label>
    <type>DateTime</type>
</CustomField>