force-app/main/default/objects/File_Staging__c/fields/File_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Id__c</fullName>
    <description>this filed will hold the ContnetDocumentId after the file insertion</description>
    <label>File_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>