force-app/main/default/objects/File_Staging__c/fields/File_Storage_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_Id__c</fullName>
    <description>Used to capture the ID of the related File Storage record which represents the bulk upload file in TRIM. This gets populated when status becomes ‘Available’ on File Storage record.</description>
    <label>File Storage Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>