force-app/main/default/objects/File_Staging__c/fields/HDP_File_Ref__c.field-meta.xml
<CustomField>
    <fullName>HDP_File_Ref__c</fullName>
    <description>HDP File reference number needed for CEI file upload</description>
    <inlineHelpText>HDP File reference number needed for CEI</inlineHelpText>
    <label>HDP File Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>