force-app/main/default/objects/File_Staging__c/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <label>Reporting Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Sources</valueSetName>
    </valueSet>
</CustomField>