force-app/main/default/objects/File_Staging__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reporting Period</label>
    <referenceTo>Reporting_Period__c</referenceTo>
    <relationshipLabel>File Stagings</relationshipLabel>
    <relationshipName>File_Stagings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>