force-app/main/default/objects/File_Staging__c/fields/Reporting_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Quarter__c</fullName>
    <formula>Reporting_Period__r.Reporting_Period_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Quarter</label>
    <type>Text</type>
</CustomField>