force-app/main/default/objects/File_Staging__c/fields/Request_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Received_Date__c</fullName>
    <description>The date in which the request to do a bulk upload (on behalf of an external user) was received by Health staff user</description>
    <label>Request Received Date</label>
    <type>Date</type>
</CustomField>