force-app/main/default/objects/File_Staging__c/fields/RP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RP_Due_Date__c</fullName>
    <description>Formula field to hold the reporting period&apos;s due dates, used in Email templates.</description>
    <formula>Reporting_Period__r.QI_Submission_Due_Dt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period Submission Due Date</label>
    <type>Date</type>
</CustomField>