force-app/main/default/objects/File_Staging__c/fields/Submission_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Submission_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture the contact of the user who requested the bulk upload submission (if applicable).</description>
    <inlineHelpText>User who requested the bulk upload submission (if applicable).</inlineHelpText>
    <label>Submission Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>File Stagings</relationshipLabel>
    <relationshipName>File_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>