force-app/main/default/objects/File_Staging__c/recordTypes/CEI.recordType-meta.xml
<RecordType>
    <fullName>CEI</fullName>
    <active>true</active>
    <label>CEI</label>
</RecordType>