force-app/main/default/objects/File_Staging__c/recordTypes/QI.recordType-meta.xml
<RecordType>
    <fullName>QI</fullName>
    <active>true</active>
    <label>QI</label>
</RecordType>