force-app/main/default/objects/File_Staging__c/listViews/CEI_Bulk_Uploads.listView-meta.xml
<ListView>
    <fullName>CEI_Bulk_Uploads</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>File_Staging__c.CEI</value>
    </filters>
    <label>CEI File Uploads</label>
</ListView>