force-app/main/default/objects/File_Staging__c/listViews/QI_File_Upload.listView-meta.xml
<ListView>
    <fullName>QI_File_Upload</fullName>
    <columns>Provider__c</columns>
    <columns>NAME</columns>
    <columns>Reporting_Quarter__c</columns>
    <columns>Request_Received_Date__c</columns>
    <columns>Total_Records__c</columns>
    <columns>Success_Records__c</columns>
    <columns>Failure_Records__c</columns>
    <columns>Display_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>File_Staging__c.QI</value>
    </filters>
    <label>QI File Upload</label>
</ListView>